# apps-service

./: .gitignore  .ops-config.yml  404.html  README.md  README_BEST.md  backup_implementation_plan.md  ex_AGENTS.md  git_diff_original.txt  index.html  install.sh  mkdocs.yml  phase_3_failed_review.md  restart_core.sh  sitemap.xml  test_auto_subdomain.py  test_env.sh  update-platform.sh
_core/master/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  service.yml  test_auto_subdomain_full_cycle.py  test_dry_run.py  test_import.py
_core/master/app/: config.py  main.py
_core/master/app/api/routes/: __init__.py  backups.py  deployments.py  health.py  logs.py  services.py  tls.py  users.py
_core/master/app/core/: database.py  events.py  security.py
_core/master/app/models/: __init__.py  backup.py  base.py  deployment.py  service.py  user.py
_core/master/app/services/: __init__.py  backup_manager.py  backup_models.py  caddy_manager.py  discovery.py  docker_manager.py  health_checker.py  kopia_backup_manager.py  log_manager.py  notifier.py
_core/master/app/ui/: backups_page.py  logs_page.py  main_page.py  services_page.py
_core/master/app/ui/components/: base.py  health_indicator.py  log_viewer.py  service_card.py
_core/master/app/utils/: __init__.py  docker_client.py  i18n.py
_core/master/test-fixtures/caddy/: Caddyfile
_core/master/test-fixtures/caddy/conf.d/: test-web-app.caddy
_core/master/test-fixtures/caddy/snippets/: logging.caddy
_core/master/test-fixtures/caddy/templates/: port.caddy.j2  subfolder.caddy.j2
_core/master/test-fixtures/services/internal/test-api/: docker-compose.yml  service.yml
_core/master/test-fixtures/services/internal/test-health-only/: docker-compose.yml  service.yml
_core/master/test-fixtures/services/internal/test-port-internal/: docker-compose.yml  service.yml
_core/master/tests/: conftest.py
_core/master/tests/integration/: test_api_integration.py  test_example.py  test_full_deploy_cycle.py  test_nicegui_ui.py  test_routing_scenarios.py
_core/master/tests/unit/: test_apprise_notifier.py  test_auth_endpoints.py  test_auth_provider.py  test_auth_switching.py  test_backup_config.py  test_backup_endpoints.py  test_backup_model.py  test_backup_scheduler.py  test_builtin_auth.py  test_deployment_endpoints.py  test_deployment_model.py  test_example.py  test_keycloak_auth.py  test_kopia_backup_manager.py  test_log_endpoints.py  test_model_utils.py  test_service_endpoints.py  test_service_model.py  test_tls_endpoints.py  test_user_endpoints.py  test_user_model.py  test_user_models.py
_core/platform-cli/: CHANGES.md  Dockerfile  INSTALL.md  pyproject.toml
_core/platform-cli/apps_platform/: __init__.py  api_client.py  caddy_parser.py  cli.py
_core/platform-cli/platform/: cli.py
_core/platform-cli/scripts/: validate.py
_core/platform-cli/tests/: test_api_client.py  test_cli.py
api/: index.html
apps/_core/master/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
apps/_core/master/app/: config.py  main.py
apps/_core/master/app/core/: security.py
apps/_core/master/app/models/: service.py
apps/_core/master/app/services/: backup_manager.py  caddy_manager.py  docker_manager.py
apps/_core/master/app/ui/: backups_page.py  main_page.py  services_page.py
apps/_core/master/scripts/: run_tests.sh
apps/_core/master/tests/unit/: test_builtin_auth.py  test_deployment_model.py  test_log_endpoints.py  test_service_model.py  test_user_endpoints.py  test_user_model.py  test_user_models.py
(+160 files in other folders)
