[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platform-cli"
version = "1.0.0"
description = "CLI утилита для управления платформой Platform Master Service"
authors = [
    {name = "Platform Team", email = "team@example.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "pyyaml>=6.0.1",
    "docker>=7.0.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.scripts]
platform = "apps_platform.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps_platform"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.black]
line-length = 120
target-version = ["py311"]
